--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build",
-        "postinstall": "npm run prod"
+        "postinstall": "npm run build"
     },
     "devDependencies": {
         "axios": "^0.27",
